2010-12-04  thomas beierlein <tb@forth-ev.de>
	* add new cty.dat provided by OK1RR
	* fix typos in man page and clarify CQDELAY handling
	* fix CQDELAY handling in parse_cfg

2010-11-29  thomas beierlein <tb@forth-ev.de>
	* fix parsing for MARKERDOTS and MARKERCALL keywords
	* fix buffer overrun during write of markerfile
	* add new callmaster file provided by OK1RR

2010-10-18  thomas beierlein <tb@forth-ev.de>
	* fix installation commands for 'make distcheck'

2010-09-11  thomas beierlein <tb@forth-ev.de>
	* fix calculation of sunrise and sunset times 
	* fix calculation of QSO Rate
	* some minor fixes of uninitialized variables

2010-01-xx  thomas beierlein <tb@forth-ev.de>
	* better recognition of hamlib install (tnx F8FCE)
	* fix a lot of buffer overrun for string handling (as glibc and gcc
	  use -D_FORTIFY_SOURCE for stricter checking of buffer overuns)
	* rewrote handling of initial exchange file. It now allows empty 
	  and comment lines (#) and spaces around the callsign. Leading 
	  space before comment gets ignored.
	* Fix input handling of notes.
	* Fix autocq handling. First characters gets no longer swallowed.
	* Drop code for old not functional LPT_KEYER and COM1_KEYER.
	* strip autogenerated files from repository.

2007-12-21  rein couperus <rein@couperus.com>

	* changed searchlog.c ('possible calls')

2007-12-18	rein couperus <rein@couperus.com>

	* changed cluster_bg.c to fix possible buffer overflow
	
	* changed searchlog.c -> compare now starts at beginning of callsign.

2003-09-10   dimiter (mitko) kroumov <lz3ny@bfra.org>
        version 0.9.1:
	
	* added an autoRXVTdiscovery and a hack XTERM arrows by putting "linux" native driver 
	as TERMinal in the environment.	

	* Introduced WAZMULT (CQWW like) and ITUMULT switches as contest rule multipliers
	
	* logcfg.dat has been split up. added a new "rules/" directory for the contest rules file.


2002-11-03   rein couperus <rein@couperus.com>

  	version 0.8.6:

	* bug  fixes: various modules
