@@ -1,6 +1,6 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(tlf, 1.0.0pre5, rein@couperus.com es tb@forth-ev.de)
-AM_INIT_AUTOMAKE(tlf, 1.0.0pre5)
+AC_INIT(tlf, 1.0.0pre6, rein@couperus.com es tb@forth-ev.de)
+AM_INIT_AUTOMAKE(tlf, 1.0.0pre6)
 AM_CONFIG_HEADER(config.h)
 
 # Checks for programs.
