@@ -48,12 +48,12 @@ int getmessages(void)
     int i, ii;
     char logline[5][82];
     char printcall[12] = "";
-	char *rp;
+    char *rp;
 
     printw("\n     Call = ");
 
     printcall[0] = '\0';
-    strncat(printcall, call, strlen(call) - 1);
+    strncat(printcall, call, sizeof(printcall) - 1);
     printw(printcall);
 
     mycountrynr = getctydata(call);	/* whoami? */
